fixed overflow caused by mobile nav

--- a/css/general.css
+++ b/css/general.css
@@ -51,6 +51,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   font-size: 62.5%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 * {
@@ -65,6 +66,11 @@ body {
   font-weight: 400;
   color: #555;
   overflow-x: hidden;
+}
+
+/* For mobile phone nav menu */
+.disable-scroll {
+  overflow: hidden;
 }
 
 /* ****************** */
